# Ising-FSS

./: .gitignore  LICENSE  README.md  README01.md  pyproject.toml  setup.cfg
docs/: config_data_summary手册.md  dl_training_guide.md
examples/: 00_quick_start.py  11_inline_config_quick_start.py  12_run_from_yaml.py  13_run_sim_with_from_args.py  14_generate_dl_data.py  21_cpu_remc_basic.py  22_gpu_remc_basic.py  23_parallel_across_L.py  24_1_batch_demo_cli.py  24_batch_worker_remc.py  25_dispatcher_single_replica.py  26_dispatcher_multi_replicas.py  31_load_and_analyze.py  32_remc_fss_pipeline_demo.py  32_remc_fss_pipeline_play.py  33_tnn_data_generation.py  34_check_tnn_file.py  35_generate_dl_data.py  36_cpu_remc_fss_pipeline.py  41_publication_run.py  42_gpu_large_scale_fss.py  43_run_path_A_independent.py  fss_from_multiple_cpu_raw.py  fss_from_multiple_gpu_raw.py  fss_from_raw_results.py  run_dispatcher_full.py  run_dispatcher_remc.py  run_path_A_independent.py  run_path_B_remc.py  work_1.sh
examples/configs/: config_L64.yaml  my_sim.yaml
src/ising_fss/: __init__.py
src/ising_fss/analysis/: __init__.py  dl_tools.py  fss_analyzer.py  statistics.py
src/ising_fss/core/: __init__.py  algorithms.py  gpu_algorithms.py  observables.py
src/ising_fss/core/__pycache__/: algorithms._accept_lut-58.py311.1.nbc  algorithms._accept_lut-58.py311.nbi  algorithms._delta_E-48.py311.1.nbc  algorithms._delta_E-48.py311.nbi  algorithms._dsu_find-340.py311.1.nbc  algorithms._dsu_find-340.py311.nbi  algorithms._dsu_find-341.py311.1.nbc  algorithms._dsu_find-341.py311.nbi  algorithms._dsu_unite-347.py311.1.nbc  algorithms._dsu_unite-347.py311.nbi  (+38 more)
src/ising_fss/data/: __init__.py  config_io.py  data_manager.py
src/ising_fss/simulation/: __init__.py  batch_runner.py  dispatcher.py  gpu_remc_simulator.py  parallel.py  remc_simulator.py
src/ising_fss/utils/: __init__.py  config.py  logger.py
src/ising_fss/visualization/: __init__.py  plots.py  styles.py
tests/: smoke_tests.py  test_algorithm_cpu1.py  test_algorithm_cpu2.py  test_data_manager.py  test_fss_analyzer.py  test_gpu_algorithms_smoke.py  test_gpu_remc_simulator.py  test_merge.py  test_simulator1.py
