[metadata]
name = ising-fss
version = 0.1.0
description = Ising-model REMC samplers (CPU + optional GPU) and analysis tools
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Li
classifier =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    numpy>=1.23
    h5py>=3.0

[options.extras_require]
dev =
    pytest>=7.0
    pytest-mock
    flake8
    black
    mypy
gpu =
    # Intentionally empty: users should install the matching cupy wheel for their CUDA.
    # See README for instructions (e.g. pip install cupy-cuda130)

[options.packages.find]
where = src

[options.package_data]
# include non-code files inside package if present
ising_fss =
    examples/*
    data/*

[options.entry_points]
console_scripts =
    # provide a CLI alias if your batch_runner exposes main()
    ising-run = ising_fss.simulation.batch_runner:main

[tool:pytest]
minversion = 6.0
addopts = -q
testpaths = tests
